# Fast-APIX

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_14_1250-0e0fe6ed7960_create_table_product.py  2025_04_14_1344-5e9c2bb67743_create_table_user.py  2025_04_14_1354-5c3d1e9297b5_create_table_post.py  2025_04_14_1539-f8e599a0ca14_create_table_profile.py  2025_04_18_1432-bab491d7f680_create_orders_table.py  2025_04_18_1539-23b0ce5e8862_create_order_product_association_table.py  2025_04_18_1743-72969861354a_add_column_to_order_product_association_.py  2025_04_18_1852-ff3c86560a92_add_unit_price_column_to_order_product_.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: congif.py
core/models/: db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: views.py
